# wasm-to-websocket

./: Cargo.toml  README.md
client/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
client/src/: lib.rs
client/tests/: README.md  ws_ping_test.ts
client/web/: README.md  package.json  server.js
client/web/static/: index.html
server/: Cargo.toml  README.md
server/src/: main.rs
