[workspace]
members = [
    "client", # WASM target
    "server" # Native target
]

# Without resolver = "2":
# - Features might get unified across targets (WASM vs Native), e.g. js feature needed in WASM target
# - Could cause compilation issues
resolver = "2" # New resolver (2021 edition and later)

