[package]
name = "wasm-client"
version = "0.1.0"
edition = "2021"
description = "WebSocket client implementation using WebAssembly"
repository = "https://github.com/sitetester/wasm-to-websocket"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "console"
]}

log = "0.4"
wasm-logger = "0.2"
